real-project/scylladb/test-lambda/classification_results/non_compilable/test_12.cpp.log
/home/anonymous/compare-order/real-project/scylladb/test-lambda/test_12.cpp:16:12: error: reference to 'less' is ambiguous
   16 |     return less(a.lower, b.lower);
      |            ^
/home/anonymous/compare-order/real-project/scylladb/test-lambda/test_12.cpp:13:6: note: candidate found by name lookup is 'less'
   13 | bool less(int a, int b);
      |      ^
/usr/lib/gcc/x86_64-linux-gnu/10/../../../../include/c++/10/bits/stl_function.h:381:12: note: candidate found by name lookup is 'std::less'
  381 |     struct less : public binary_function<_Tp, _Tp, bool>
      |            ^
/home/anonymous/compare-order/real-project/scylladb/test-lambda/test_12.cpp:16:12: error: no viable constructor or deduction guide for deduction of template arguments of 'less'
   16 |     return less(a.lower, b.lower);
      |            ^
/usr/lib/gcc/x86_64-linux-gnu/10/../../../../include/c++/10/bits/stl_function.h:381:12: note: candidate function template not viable: requires 1 argument, but 2 were provided
  381 |     struct less : public binary_function<_Tp, _Tp, bool>
      |            ^~~~
/usr/lib/gcc/x86_64-linux-gnu/10/../../../../include/c++/10/bits/stl_function.h:381:12: note: implicit deduction guide declared as 'template <typename _Tp = void> less(less<_Tp>) -> less<_Tp>'
/usr/lib/gcc/x86_64-linux-gnu/10/../../../../include/c++/10/bits/stl_function.h:381:12: note: candidate function template not viable: requires 0 arguments, but 2 were provided
/usr/lib/gcc/x86_64-linux-gnu/10/../../../../include/c++/10/bits/stl_function.h:381:12: note: implicit deduction guide declared as 'template <typename _Tp = void> less() -> less<_Tp>'
2 errors generated.
